Parte de 3D terminada

--- a/3D/3D.index.ca.html
+++ b/3D/3D.index.ca.html
@@ -1,17 +1,305 @@
 <!DOCTYPE html>
-<html lang="ca">
-    <head>
-        <meta charset="UTF-8">
-        <title></title>
-        <link rel="stylesheet" href="../css/foundation.min.css">
-        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    </head>
-    <body>
+<html>
+<head>
+<meta charset="UTF-8">
+	<title>Migraciones</title>
+	<link rel="stylesheet" type="text/css" href="css/3d-css.css">
+	<script  src="js/3d-js.js"></script>
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
-        <!-- no tocar les llibreries -->
-        <script src="../js/jquery.min.js"></script>
-        <script src="../js/what-input.js"></script>
-        <script src="../js/foundation.min.js"></script>
-        <script src="../js/app.js"></script>
-    </body>
+
+</head>
+<body>
+
+<!-- Menú -->
+
+<div class="menu">
+<img class="logo" src="img/logo.png">
+	<nav class="navegadoriz">
+	<a href="../index.html">Inicio</a>
+	</nav>
+
+	<nav class="navegadorder">
+	<a href="../3A/3A.index.ca.html">3 A</a>
+	<a href="../3B/3B.index.ca.html">3 B</a>
+	<a href="../3C/3C.index.ca.html">3 C</a>
+	<a class="activao" href="#">3 D</a>
+	<a class="es " href="3D.index.es.html">ES</a><span>|</span><a class="cat activao"  href="#">CAT</a>
+
+	</nav>
+
+</div>
+
+<div class="menu2">
+<img class="logo" src="img/logo.png">
+
+<img id="menudesplegable" width="40px" class="iconmenu" src="img/menu.svg">
+	</div>
+	<div id="desplegable" class="desplegable">
+	<a id="inicio" href="#">Inicio</a><br><hr id="hover1" width="150px">
+	<a id="3a" href="#">3 A</a><br><hr id="hover2" width="160px">
+	<a id="3b" href="#">3 B</a><br><hr id="hover3" width="170px">
+	<a id="3c" href="#">3 C</a><br><hr id="hover4" width="180px">
+	<a id="3d" class="activao" href="#">3 D</a><br><hr id="hover5" width="200px">
+	<a class="es "  class="activao" href="3D.index.es.html">ES</a><span>|</span><a class="cat activao"  href="cat/index.html">CAT</a>
+
+
+	</div>
+
+<!-- Portada -->
+
+<div class="portada">
+
+	<!-- flecha -->
+
+<div id="flecha1" class="flechaportada"></div>
+</div>
+
+<!-- panel de imagenes -->
+
+<div id="div1" class="contenedorblanco1">
+
+	<div class="bolas">
+			<img id="historia1" class="pointer">
+			<img id="historia2" class="pointer" >
+			<img id="historia3" class="pointer" ><br>
+			<img id="historia4" class="pointer" >
+			<img id="historia5" class="pointer" >
+			<p>Para saber la historia completa, haz <span>clic</span> en la imagen.</p>
+
+			<!-- flecha2 -->
+
+
+	</div>
+	<div id="flecha2"  class="flechanegra1"></div>
+
+
+</div>
+
+<!-- historia 1 -->
+
+<div id="div2"  class="contenedorblanco">
+<div class="historia1">
+
+
+
+
+
+
+
+	<!-- parte de la descripción -->
+
+	<div class="descripcion">
+	<div id="subir1"  class="subirblanco"></div>
+	<img class="pointer" src="img/entrevistados/yeomanfoto2.png">
+		<h4>Martín de Blas Martínez</h4>
+				<h5>Castella i Lleó</h5>
+				<p>Entrevistem Martín de Blas Martínez, un home de 68 anys nascut a Castella i Lleó, concretament a El Burgo de Osma, Sòria. Va venir a Catalunya amb 15 anys per motius d'estudi, Actualment està casat i té dos fills i dos néts. Ha estat treballant en
+					la mateixa empresa durant 40 anys com a cap de crèdits.</p>
+	</div>
+
+	<!-- parte del video -->
+	<div class="video">
+				<h4>Entrevista Martín de Blas Martínez</h4>
+			<iframe width="420" height="315" src="https://www.youtube.com/embed/XE8U7AuPc-c" frameborder="0" allowfullscreen></iframe>
+			</div>
+	<div class="grupo">
+		<p ><span id="persona1" class="pointer">Andy</span> - <span id="persona2" class="pointer">Ian</span> - <span id="persona3" class="pointer">Zaid</span></p>
+		<hr class="hrnegro">
+		<div id="andy"><img  class="pointer imggrupo" src="img/grupo1/andy.png"><br>Tinc 15 anys i he nascut a Catalunya com els meus pares. Dos dels meus avis són d'Andalusia i un altre de Castella i Lleó. M'encanta l'esport i la música.</div>
+		<div id="ian"><img  class="pointer imggrupo" src="img/grupo1/ian.png"><br>Tinc 14 anys. M'agrada molt la música. He nascut a Catalunya com la meva mare. El meu pare va néixer a França. Tres dels meus avis van néixer a Andalusia i un altre a Astúries.</div>
+		<div id="zaid"><img  class="pointer imggrupo" src="img/grupo1/zaid.png"><br>Tinc 14 anys, m'agrada el futbol. He nascut a Espanya però els meus pares provenen del Marroc.</div>
+	</div>
+	<div id="flecha3" class="flechanegra"></div>
+</div>
+</div>
+
+<!-- historia 2 -->
+
+<div id="div3" class="contenedornegro">
+<div class="historia1">
+
+
+	<!-- parte de la descripción -->
+
+	<div class="descripcion">
+		<div id="subir2"  class="subirnegro"></div>
+	<img class="pointer" src="img/entrevistados/señorafoto2.png">
+		<h4>Maria Delgada Romero</h4>
+		<h5>Ecija,Sevilla</h5>
+		<p>Maria Prima Romero té 74 anys i té 4 fills i 7 nietos.De petita va viure a Osin. En Ecija, Sevilla i ara viu a Badalona, Espanya. Va venir perque a Sevilla no hi havia feina ia Espanya hi havia molta feina i va venir per Fer treball. </p>
+	</div>
+
+
+		<!-- parte del video -->
+
+	<div class="video">
+				<h4>Entrevista Maria Delgada Romero</h4>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/aPxmix6pzzQ" frameborder="0" allowfullscreen></iframe>
+			</div>
+
+
+
+	<div class="grupo">
+		<p ><span id="persona4"  class="pointer">Adan</span> - <span id="persona5" class="pointer">Judith</span> - <span id="persona6" class="pointer">Sandra</span></p>
+		<hr class="hrblanco">
+		<div id="adan"><img  class="pointer imggrupo" src="img/grupo2/adan2.png"><br>Hola jo sóc Adan tinc 15 anys, els meus pares són del Pakistan i jo vaig néixer ahi. El meu germà petit ha nascut a Espanya. Quan jo vaig venir a Catalunya tenia 7 anys. Ara visc a Badalona.</div>
+		<div id="judith"><img  class="pointer imggrupo" src="img/grupo2/judith2.png"><br>Hola em dic judith i tinc 15 anys. Viu i he viscut tota la meva vida a badalona i els meus pares també són de badalona..</div>
+		<div id="sandra"><img  class="pointer imggrupo" src="img/grupo2/sandra2.png"><br>Hola em dic Sandra tinc 15 anys he nascut a Sevilla el pare i la mare també i ara jo i la meva família vivim a badalona. M'agrada molt dibuixar.</div>
+	</div>
+	<div id="flecha4" class="flechablanca"></div>
+
+</div>
+</div>
+
+
+<!-- historia 3 -->
+
+<div id="div4" class="contenedorblanco">
+<div class="historia1">
+
+
+
+	<!-- parte de la descripción -->
+
+	<div class="descripcion">
+		<div id="subir3"  class="subirblanco"></div>
+	<img class="pointer" src="img/entrevistados/morofoto2.png">
+		<h4>Abderrahim</h4>
+				<h5>Marroc (Ciutat de Casablanca)</h5>
+				<p>Abderrahim va néixer al Marroc (Ciutat de Casablanca. Al Marroc va viure la seva infància, adolescència i gran part de la seva vida adulta. Quant a treball era Assessor Financer. En 2011 va decidir migrar a Espanya ja que es va enamorar i cas amb
+					una dona la qual residia en aquest país i és la seva actual esposa. quant al món laboral a Espanya per Abderrahim va ser nefast tot i tenir un títol universitari, ja que no va ser capaç de trobar un ofici a Espanya la qual cosa el va portar a provar
+					sort en un altre país.</p>
+	</div>
+
+	<!-- parte del video -->
+
+	<div class="video">
+				<h4>Entrevista Abderrahim</h4>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/dpEUUP8XzIc" frameborder="0" allowfullscreen></iframe>
+			</div>
+
+
+	<div class="grupo">
+		<p ><span id="persona7" class="pointer">Adil</span> - <span id="persona8" class="pointer">Ali</span> - <span id="persona9" class="pointer">Lazaro</span></p>
+		<hr class="hrnegro">
+		<div id="adil"><img  class="pointer imggrupo" src="img/grupo3/adil.png"><br>Em dic Adil tinc 15 anys he nascut a Casablanca (Marroc) el 13 d'octubre del 2000. He migrat amb la meva família a Valladolid (Espanya) on vaig residir 4 anys. Actualment resideixo a Badalona (Barcelona, Espanya)</div>
+		<div id="ali"><img  class="pointer imggrupo" src="img/grupo3/ali.png"><br>Sóc Ali vaig néixer el 15 d'Abril del 2000 a Barcelona (Espanya). Per la qual cosa sóc espanyol, encara que el meu pare va néixer a la ciutat de Nador (Marroc). I la meva mare a Espanya com jo</div>
+		<div id="lazaro"><img  class="pointer imggrupo" src="img/grupo3/lazaro.png"><br>Jo sóc Lázaro Yanes tinc 16 anys he nascut a Matanzas el 8 de juliol de 1999. Als 11 anys jo i la meva família anem a migrar cap a Madrid on vaig viure 2 años.Tuvímos de migrar cap a Barcelona on porto residint actualment gairebé 3 anys</div>
+	</div>
+	<div id="flecha5" class="flechanegra"></div>
+
+</div>
+</div>
+
+
+<!-- historia 4 -->
+
+<div id="div5" class="contenedornegro">
+<div class="historia1">
+
+
+	<!-- parte de la descripción -->
+
+	<div class="descripcion">
+	<div id="subir4"  class="subirnegro"></div>
+	<img class="pointer" src="img/entrevistados/carcelariofoto2.png">
+		<h4>Joan Joel Gonzalez</h4>
+				<h5>Uruguay</h5>
+				<p>Hem dic Joan Joel Gonzalez tinc 40 anys so de l'Uruguay vaig viure 28 anys alla pero pero vaig tenir que emigrar per raons economiques i per treure a la meva familia endevant.Las meves aficions son jugar a futbol i el ocells.</p>
+	</div>
+
+
+	<!-- parte del video -->
+
+	<div class="video">
+
+				<h4>Entrevista Joan Joel Gonzalez</h4>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/ErjB-ARExNw" frameborder="0" allowfullscreen></iframe>
+			</div>
+
+	<div class="grupo">
+		<p ><span id="persona10"  class="pointer">Katya</span> - <span id="persona11" class="pointer">Robert</span> - <span id="persona12" class="pointer">Zaida</span></p>
+		<hr class="hrblanco">
+		<div id="katya"><img  class="pointer imggrupo" src="img/grupo4/katya2.png"><br>Em dic katia tinc 15 anys sóc del uruguay, però amb 4 anys vaig emigrar a Espanya, Catalunya. Vaig a l'institut Barres i Ones m'agrada jugar a futbol i escolta música.</div>
+		<div id="roberto"><img  class="pointer imggrupo" src="img/grupo4/roberto2.png"><br>Em dic Roberto tinc 14 anys he nascut a Badalona i els meus familiars són de França i Catalunya.</div>
+		<div id="zaida"><img  class="pointer imggrupo" src="img/grupo4/zaida2.png"><br>Em dic Zaida tinc 15 anys vaig néixer a Barcelona però vaig estar un any vivint a Andalusia, els meus pares són de Màlaga i Granada m'agrada la música i vaig al instal Barres i Ones.</div>
+
+	</div>
+	<div id="flecha6" class="flechablanca"></div>
+
+</div>
+</div>
+
+
+<!-- historia 5 -->
+
+<div id="div6" class="contenedorblanco">
+<div class="historia1">
+
+
+
+	<!-- parte de la descripción -->
+
+	<div class="descripcion">
+		<div id="subir5"  class="subirblanco"></div>
+	<img class="pointer" src="img/entrevistados/señorgambiafoto2.png">
+		<h4>Mohamed</h4>
+				<h5>Gambia</h5>
+				<p>Mohamed és un home de Gàmbia, té 47 anys. Mohamed va venir a Espanya l'any 1991. És un home que va trigar 8 mesos en aprendre espanyol. Va venir a Espanya perquè volia guanyar-se la vida, poder treballar i poder guanyar diners perquè al seu país hi
+					havia poc treball.</p>
+	</div>
+
+
+	<!-- parte del video -->
+
+	<div class="video">
+				<h4>Entrevista Mohamed</h4>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/P3mdNxjn-IA" frameborder="0" allowfullscreen></iframe>
+			</div>
+
+
+	<div class="grupo">
+		<p ><span id="persona13" class="pointer">Ismael</span> - <span id="persona14" class="pointer">Sergi</span> - <span id="persona15" class="pointer">Tabraiz</span></p>
+		<hr class="hrnegro">
+		<div id="ismael"><img  class="pointer imggrupo" src="img/grupo5/ismael.png"><br>Sóc Ismael tinc 14 anys sóc de Barcelona i la meva mare també però el meu pare és de Mali i el pare de la meva àvia era d'Andalusia i la mare de la meva àvia era d'Aragó.</div>
+		<div id="sergi"><img  class="pointer imggrupo" src="img/grupo5/sergi.png"><br>Sóc Sergi tinc 14 anys sóc de Barcelona, els meus pares són de Badalona també i els meus avis són de Màlaga i de Múrcia.</div>
+		<div id="tabraiz"><img  class="pointer imggrupo" src="img/grupo5/tabraiz.png"><br>Sóc Tabraiz tinc 14 anys sóc del Pakistan, vaig venir aquí a Espanya fa 4 anys.</div>
+	</div>
+	<div id="flecha7" class="flechanegra"></div>
+
+</div>
+</div>
+
+
+
+<!-- footer -->
+
+
+<div id="div8" class="footer">
+	<div class="links">
+	<a href="../index.html"><img width="150px" height="50px" src="img/inicio.png"></a><br>
+	<a href="../3A/3A.index.ca.html"><img width="150px" height="50px" src="img/3a.png"></a>
+	<a href="../3B/3B.index.ca.html"><img width="150px" height="50px" src="img/3b.png"></a>
+	<a href="../3C/3C.index.ca.html"><img width="150px" height="50px" src="img/3c.png"></a>
+
+	</div>
+	<div class="footerlogo">
+	<img class="logofooter" src="img/logofooter.png">
+	</div>
+	<div class="social">
+	<a href="https://www.facebook.com/a08044995/" target="_blank"><img class="iconos" width="60px"	 src="img/facebook.svg"></img></a>
+	<a href="http://barresiones.com/web/" target="_blank"><img class="iconos" width="60px"	 src="img/barresiones.png"></img></a>
+	<a href="https://www.youtube.com/channel/UChZvlh-hhXjkJ9MZ1S-_NGg" target="_blank"><img class="iconos" width="60px"	 src="img/youtube.svg"></img></a>
+	</div>
+
+	<div class="copyright">
+		<p> Created by Jonathan Vallejo - Ayoub Khalfaoui - Erwin Chumo </p>
+
+		</div>
+
+</div>
+
+
+</body>
 </html>
