--- a/3A/3A.index.ca.html
+++ b/3A/3A.index.ca.html
@@ -1,17 +1,307 @@
-<!DOCTYPE html>
-<html lang="ca">
-    <head>
-        <meta charset="UTF-8">
-        <title></title>
-        <link rel="stylesheet" href="../css/foundation.min.css">
-        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    </head>
-    <body>
+<!doctype html>
+<html class="no-js" lang="en" dir="ltr">
 
-        <!-- no tocar les llibreries -->
-        <script src="../js/jquery.min.js"></script>
-        <script src="../js/what-input.js"></script>
-        <script src="../js/foundation.min.js"></script>
-        <script src="../js/app.js"></script>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Migracions 3rA</title>
+  <link rel="stylesheet" href="../css/foundation.min.css">
+  <link rel="stylesheet" href="css/app.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+<header>
+
+  <div class="top-bar">
+    <div>
+      <ul class="menu">
+        <a href="../index.ca.html">Inici</a></li>
+      </ul>
+    </div>
+    <div>
+      <ul class="menu">
+        <li><a href="../3A/3A.index.ca.html">3A</a></li>
+        <li><a href="../3B/3B.index.ca.html">3B</a></li>
+        <li><a href="../3C/3C.index.ca.html">3C</a></li>
+        <li><a href="../3D/3D.index.ca.html">3D</a></li>
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li><a href="#"></a>
+            <ul class="menu">
+              <li><a href="3A.index.es.html">Español</a></li>
+              <li><a href="3A.index.ca.html">Catalá</a></li>
+            </ul>
+        </ul>
+      </ul>
+    </div>
+  </div>
+</header>
+
+<body>
+
+  <div class="imagen">
+  </div>
+
+  <div id="container-main">
+    <div class="row">
+      <div class="small-12 columns">
+        <h1 class="centro">Entrevistes</h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="accordion-container">
+        <a href="#" class="accordion-titulo"><img class="fotop fotos"align="center" src="img/Alex.png">Daria Graveliuc<span class="toggle-icon"></span></a>
+        <div class="accordion-content">
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Descripció del grup</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-4 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Joana, sóc una persona imaginativa, m'agrada crear històries i escriure-les. Fotografio paisatges hipsters, llegeixo i joc a molts videojocs (encara que sigui bastant manca).</p>
+            </div>
+            <div class="small-4 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Hakim, youtube incomprès pels seus "peculiars" vídeos a internet.</p>
+            </div>
+            <div class="small-4 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Em dic Àlex Ferrer Andreu, estudi a l'institut barresiones i sóc un noi al que li agraden molt els videojocs.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Entrevistat</h1>
+            </div>
+          </div>
+          <div class="row">
+
+            <div class="small-12 columns text-center">
+              <p class="paddingbottom">Daria Graveliuc. Nació aSuceaya, Rumania, el año 1958 bajo un régimen comunista. Tiene el bachillerato y ha trabajado en varios países europeos como Italia o Alemania.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Vn8to9MSaUc" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="accordion-container">
+        <a href="#" class="accordion-titulo"><img class="fotop fotos"align="center" src="img/2.png">Alexander<span class="toggle-icon"></span></a>
+        <div class="accordion-content">
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Descripció del grup</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <p class="centro paddingbottom">Aquest treball el fem per demostrar que l’emmigració no es fàcil i que ningú emmigra perquè vol, sinò per necessitat i per intentar trobar una vida millor.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-4 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Iman Jebari</p>
+            </div>
+            <div class="small-4 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Amenda Effah</p>
+            </div>
+            <div class="small-4 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Leyla El Haddad</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Entrevistat</h1>
+            </div>
+          </div>
+          <div class="row">
+
+            <div class="small-12 columns text-center">
+              <p class="paddingbottom">Alexander, pescador a l’Equador, va venir a Espanya en busca de feina deixant al seu país la seva filla de 3 anys.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <iframe width="420" height="315" src="https://www.youtube.com/embed/kfgQFVnLsgk" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="accordion-container">
+        <a href="#" class="accordion-titulo"><img class="fotop fotos"align="center" src="img/5.png">Laila Khaidar el Yusufi<span class="toggle-icon"></span></a>
+        <div class="accordion-content">
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Descripció del grup</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Hola em dic Marina tinc 15 anys i les meves aficions són cuinar, jugar a videojocs i quedar amb els meus amics.</p>
+            </div>
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Hola soc Mireia, tinc 15 anys, faig 3 d’eso, i m’ agradaria estudiar psicologia.</p>
+            </div>
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Hola soc Aaron Covelo Martos tinc 14 anys. El meu esport preferit és el basquet i m’agradaria estudiar per ser mecànic de cotxes.</p>
+            </div>
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Hola em dic Jose Zambrana la meva major afició es jugar a futbol i m’agradaria estudiar INEF ( cicle formatiu d’esport) m’agradaria ser entrenador de futbol i professor d’ educació física.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Entrevistat</h1>
+            </div>
+          </div>
+          <div class="row">
+
+            <div class="small-12 columns text-center">
+              <p class="paddingbottom">Laila Khaidar el Yusufi va nèixer al Marroc i va emigrar a Espanya als anys 90 per acabar els seus estudis i treballar. Actualment té tres fills i viu a Barcelona.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/I-6KI1tXGoM" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="accordion-container">
+        <a href="#" class="accordion-titulo"><img class="fotop fotos"align="center" src="img/4.png">Mari Carmen Antelo Garrido<span class="toggle-icon"></span></a>
+        <div class="accordion-content">
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Descripció del grup</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <p class="centro paddingbottom">Som tres noies de 3rA, de 15 anys, que farem un vídeo entrevistant a Mari Carmen que es de la Rioja. Sabrem com vivia allà abans de venir aquí , el perquè va vindre, com ho va fer i moltes mes coses que observareu en el vídeo.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Patricia Lorenzo</p>
+            </div>
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Laura Fernàndez</p>
+            </div>
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Judith Paton</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Entrevistat</h1>
+            </div>
+          </div>
+          <div class="row">
+
+            <div class="small-12 columns text-center">
+              <p class="paddingbottom">Mari Carmen Antelo Garrido. Va nèixer al 19 de Maig del 1951 a Madrid. Va estudiar batxiller i secretariat. La seva professió era ama de casa però va treballar d'axuliar i de control de qualitat. Es viuda. Ha viscut a Madrid, Logronyo i Barcelona. No té fills i no viu amb ningú. El seu pare es deia José María i va nèixer el 1925 i era comerciant. La seva mare es deia Carmen i va nèixer el 1925 a Logronyo i era modista de decoració.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <video src="video/fireworks_reducido.webm"></video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="accordion-container">
+        <a href="#" class="accordion-titulo"><img class="fotop fotos"align="center" src="img/3.png">Ali<span class="toggle-icon"></span></a>
+        <div class="accordion-content">
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Descripció del grup</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <p class="centro paddingbottom">Som un grup de cuatre persones de 3r d'eso. Aquest trimestre ens hem dedicat ha fer una entrevista a una persona d'origen pakistan. Es un noi jode de 22 anys, es diu Ali i probé de Lahore(Pakistan). La nostra finalitat del treball es que aprengeu a posarvos en el lloc d'aquestes persones que tenen que deixar casa seva i sortir al mon en busca d'una millor vida.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Moha</p>
+            </div>
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Muha</p>
+            </div>
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Erdnia</p>
+            </div>
+            <div class="small-3 columns text-center">
+              <img class="fotos" align="center" src="img/sombra.png">
+              <p class="centro">Hammad</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <h1 class="centro">Entrevistat</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="small-12 columns text-center">
+              <iframe width="420" height="315" src="https://www.youtube.com/embed/tHLEi8HeAs4" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <footer>
+      <div class="row">
+        <div class="small-12 columns text-center">
+          <img class="fotofooter"align="center" src="img/logo.png">
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 columns text-center">
+          <a href="https://www.youtube.com/channel/UChZvlh-hhXjkJ9MZ1S-_NGg"><img class="fotox" align="center" src="img/youtube.png"></a>
+        </div>
+        <div class="small-6 columns text-center">
+          <a href="http://barresiones.com"><img class="fotox" align="center" src="img/barresiones.jpg"></a>
+        </div>
+      </div>
+      <span class="ir-arriba icon-arrow-up2"><img class="flecha" align="center" src="img/flecha.svg"></span>
+</footer>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
+    <script src="js/app.js"></script>
+</body>
+
 </html>
