--- a/3A/3A.index.ca.html
+++ b/3A/3A.index.ca.html
@@ -16,7 +16,7 @@
   <div class="top-bar">
     <div>
       <ul class="menu">
-        <a href="../index.ca.html">Inici</a></li>
+        <a href="../index.html">Inici</a></li>
       </ul>
     </div>
     <div>
