--- a/3B/3B.index.es.html
+++ b/3B/3B.index.es.html
@@ -1,17 +1,334 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <title></title>
-        <link rel="stylesheet" href="../css/foundation.min.css">
-        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    </head>
-    <body>
+<html>
 
-        <!-- no tocar les llibreries -->
-        <script src="../js/jquery.min.js"></script>
-        <script src="../js/what-input.js"></script>
-        <script src="../js/foundation.min.js"></script>
-        <script src="../js/app.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Migraciones</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./stylesheets/app.css">
+</head>
+
+<body>
+
+
+    <div class="row align-right container-nav align-middle">
+  <div class="small-7 columns nav-color">
+      <ul class="menu">
+        <li class="circulo"><a class="space-left" href="../3A/3A.index.ca.html">3A</a></li>
+<li class="circulo"><a class="space-left" href="../3B/3B.index.ca.html">3B</a></li>
+<li class="logo">
+    <a href="../index.html"><img src="img/logo.png" alt="" /></a>
+</li>
+<li class="circulo"><a class="space-right" href="../3C/3C.index.ca.html">3C</a></li>
+<li class="circulo"><a class="space-right" href="../3D/3D.index.ca.html">3D</a></li>
+      </ul>
+    </div>
+    <div class="small-1 columns">
+      <a href="3B.index.ca.html"><img src="img/cata.png" alt="" /></a>
+      <a href="3B.index.es.html"><img src="img/cast1.png" alt="" /></a>
+    </div>
+
+    </div>
+
+   <div class="row Photo-3B align-center">
+     <div class="small-12 columns align-center text-center align-middle">
+       <img src="img/3rB.png" alt="" />
+
+     </div>
+     <div class="samll-12 columns align-center text-center">
+           <a href="#Entrevista"><img src="img/row.png" alt="" /></a>
+     </div>
+   </div>
+   <div class="row container-entrevista align-center" id="Entrevista">
+           <div class="row align-center align-middle">
+               <div class="small-4 columns ehover3 text-center">
+                   <a href="#primero"><img src="img/Cesar.png" alt="" /></a>
+                   <aside class="overlay">
+                       <h2>Cesar</h2>
+                   </aside>
+               </div>
+               <div class="small-4 columns ehover3 text-center">
+                   <a href="#segundo"><img src="img/Mousaa.png" alt="" /></a>
+                   <aside class="overlay">
+                       <h2>Mousaa</h2>
+                   </aside>
+               </div>
+               <div class="small-4 columns ehover3 text-center">
+                   <a href="#tercero"><img src="img/Abdelhadi.png" alt="" /></a>
+                   <aside class="overlay">
+                       <h2>Abdelhadi</h2>
+                   </aside>
+               </div>
+           </div>
+           <div class="row align-center align middle text-center">
+               <div class="small-4 columns ehover3">
+                   <a href="#cuarto"><img src="img/Margarita.png" alt="" /></a>
+                   <aside class="overlay">
+                       <h2>Margarita</h2>
+                   </aside>
+               </div>
+               <div class="small-4 columns ehover3 text-center">
+                   <a href="#quinto"><img src="img/Younes.png" alt="" /></a>
+                   <aside class="overlay">
+                       <h2>Younes</h2>
+                   </aside>
+               </div>
+               <div class="small-4 columns ehover3 text-center">
+                   <a href="#sexto"><img src="img/Frandy.jpg" alt="" /></a>
+                   <aside class="overlay">
+                       <h2>Frandy</h2>
+                   </aside>
+               </div>
+
+           </div>
+       </div>
+
+    <div class="row container-videos" id="primero">
+        <div class="small-8 columns align-middle">
+            <iframe width="780" height="400" src="https://www.youtube.com/embed/biG9l8E9whU" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="small-4 columns align-middle text-center">
+            <h2>Cesar</h2>
+            <p>
+                Es un chico que a nacido en Ecuador, montó su negocio en Badalona.Va venir hasta Badalona para que su mujer vivía aquí. Ahora tiene una barbería en el borde de nuestro desistido y está muy feliz.
+            </p>
+<a href="#Entrevista"><img src="img/row2.png" alt="" /></a>
+        </div>
+    </div>
+    <div class="row info-videos">
+        <div class="small-12 columns text-center">
+            <h1>Información del Grupo</h1>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/no-picture.png" alt="" />
+            <p>
+                Alejandro ha nacido en Badalona y sus padres en Barcelona.
+            </p>
+
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/Iker.png" alt="" />
+            <p>
+                Iker ha nacido en Alemania y sus padres también.
+            </p>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/no-picture.png" alt="" />
+            <p>
+                Jose ha nacido en Badalona y sus padres en Barcelona.
+            </p>
+        </div>
+    </div>
+
+    <div class="row container-videos" id="segundo">
+        <div class="small-8 columns align-middle">
+            <iframe width="780" height="400" src="https://www.youtube.com/embed/sKwG3_p_egI" frameborder="0" allowfullscreen></iframe>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+            <h2>Moussa</h2>
+            <p>
+                Moussa Maati, nació en un pueblo de Marruecos en 1970. Vive en Barcelona y trabaja de jardinero. Tiene tres hijos de 11, 12 y 14 años. Su padre se llama Mbarek y trabajaba de agricultor y su madre se llama Fatima y también trabajaba de agricultora.               Vino
+                aquí porque algunos amigos iban y él también quería probar cuando ya estaba aquí no sabía hablar, por lo que fue a clases de castellano y catalán.
+            </p>
+            <a href="#Entrevista"><img src="img/row2.png" alt="" /></a>
+        </div>
+    </div>
+    <div class="row info-videos">
+        <div class="small-12 columns text-center">
+            <h1>Información del Grupo</h1>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/B.png" alt="" />
+            <p>
+                Mohamed Maati nació en Badalona. Su padre tiene 45 años, nació en Marruecos en un pueblo llamado Zeaara Sidi Bounouri trabaja de jardinero y su madre tiene 33 años, nació también en Marruecos en la ciudad, Larache, y no trabaja.
+            </p>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/A.png" alt="" />
+            <p>
+                Manuel Rodríguez nació en Badalona. Su padre tiene 38 años y nació en Madrid, trabaja de transportista y su madre tiene 36 años y nació en Badalona y trabaja de panadera.
+            </p>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/C.png" alt="" />
+            <p>
+                Reda El Mgharba nació en Badalona. Su padre tiene 47 años y nació en Marruecos, no trabaja por problemas de espalda. Su madre tiene 39 años y nació también en Marruecos, trabaja en una industria textil.
+            </p>
+        </div>
+    </div>
+
+    <div class="row container-videos" id="tercero">
+        <div class="small-8 columns align-middle">
+            <iframe width="780" height="400" src="https://www.youtube.com/embed/aZU1KjMhKNk" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="small-4 columns align-middle text-center">
+            <h2>Abdelhadi</h2>
+            <p>
+                Abdelhadi Tougui Bakasse es un hombre de 51 años que nació en la ciudad de Marrakech y vino a vivir en Badalona hace ya varios años.
+            </p>
+            <a href="#Entrevista"><img src="img/row2.png" alt="" /></a>
+        </div>
+    </div>
+    <div class="row info-videos">
+        <div class="small-12 columns text-center">
+            <h1>Información del Grupo</h1>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/B_Ismail.png" alt="" />
+            <p>
+                Ismael tiene 14 años y le gusta jugar al fútbol.
+            </p>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/B_Raul.png" alt="" />
+            <p>
+                Raul tiene 14 años y le gusta jugar al fifa.
+            </p>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/no-picture.png" alt="" />
+            <p>
+                Eric tiene 15 años, le gusta el anime y leer manga.
+            </p>
+        </div>
+    </div>
+
+    <div class="row container-videos" id="cuarto">
+        <div class="small-8 columns align-middle">
+            <iframe width="780" height="400" src="https://www.youtube.com/embed/HNrOwgrKp20" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="small-4 columns align-middle text-center">
+            <h2>Margarita</h2>
+            <p>
+                Margarita Monsell, nació y vivía en Valencia, más concretamente en la calle "San Ignacio de Layola". Actualmente está viviendo en Barcelona, y cada mes baja a Valencia a ver a la familia y amigos que dejó atrás cuando decidió venir a Cataluña.
+            </p>
+            <a href="#Entrevista"><img src="img/row2.png" alt="" /></a>
+        </div>
+    </div>
+    <div class="row info-videos">
+        <div class="small-12 columns text-center">
+            <h1>Información del Grupo</h1>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/B_Irene.png" alt="" />
+            <p>
+                Irene Zacarías Ros, tiene 14 años y nació el 8 de octubre en Can Ruti de Badalona-Barcelona.
+            </p>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/B_Eva.png" alt="" />
+            <p>
+                Eva Barragán García, tiene 15 años y nació el 12 de enero en Can Ruti de Badalona-Barcelona.
+            </p>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/B_Laura.png" alt="" />
+            <p>
+                Laura Mejía Cayuela, tiene 14 años y nació el 28 de octubre en Can Ruti de Badalona-Barcelona.
+            </p>
+        </div>
+    </div>
+
+    <div class="row container-videos" id="quinto">
+        <div class="small-8 columns align-middle">
+            <iframe width="780" height="400" src="https://www.youtube.com/embed/RicT8r5JL4g" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="small-4 columns align-middle text-center">
+            <h2></h2>
+            <p>
+
+            </p>
+        </div>
+    </div>
+    <div class="row info-videos">
+        <div class="small-12 columns text-center">
+            <h1>Información del Grupo</h1>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/B_Carlos.png" alt="" />
+            <p>
+
+            </p>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/B_Manmeet.png" alt="" />
+            <p>
+
+            </p>
+        </div>
+
+        <div class="small-4 columns align-middle text-center">
+          <img src="img/no-picture.png" alt="" />
+            <p>
+
+            </p>
+        </div>
+    </div>
+
+    <div class="row container-videos" id="sexto">
+        <div class="small-8 columns align-middle">
+            <iframe width="780" height="400" src="https://www.youtube.com/embed/uVoNMCqzAXs" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="small-4 columns align-middle text-center">
+            <h2>Frandy</h2>
+            <p>
+                Frandy Junior. Tiene 20 años, nació en Santo Domingo. Llegó a Barcelona en avión a los 16 años. Estudió en una escuela llamada San Pablo Apuesto y ahora, es estudiante de informática en el instituto Barres i Ones.
+            </p>
+            <a href="#Entrevista"><img src="img/row2.png" alt="" /></a>
+        </div>
+    </div>
+    <div class="row info-videos">
+        <div class="small-12 columns text-center">
+            <h1>Información del Grupo</h1>
+        </div>
+
+        <div class="small-5 columns align-middle text-center">
+          <img src="img/no-picture.png" alt="" />
+            <p>
+                Nerea Orozco Galiano, es de Cataluña. Tiene 15 años y nació el día 1 de Abril del 2001 en Hospitalet.  Le gustan mucho los animales, tiene dos Carolinas (Caro y Nano), un perro (Dana) y dos gatos (Lyon y Nala). Su pasión se bailar.
+            </p>
+        </div>
+
+        <div class="small-5 columns align-middle text-center">
+          <img src="img/Judith.png" alt="" />
+            <p>
+                Judith Tur Mendez, es de Cataluña. Tiene 14 años y nació el 22 de Noviembre en Calella.  Le gusta mucho dormir y cocinar. También le gustan los animales. y Tiene 1 hamster y 2 perras (Hannah y Kira).
+            </p>
+        </div>
+
+    </div>
+    </div>
+
+    <div class="row footer align-middle text-center ">
+        <div class="small-2 columns">
+          <a href="../index.html"><img src="img/logo.png" alt="" /></a>
+        </div>
+        <div class="small-4 columns align-middle">
+            <h5> Frandy Junior y Jonnathan Rocha</h5>
+        </div>
+        <div class="small-5 colums text-right align-right ">
+          <a href="#"><img src="img/logobarres1.png" alt="" /></a>
+        </div>
+      </div>
+
+
+
+</body>
+
 </html>
