--- a/3C/3C.index.ca.html
+++ b/3C/3C.index.ca.html
@@ -17,7 +17,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="./css/3c.main.scss">
+    <link rel="stylesheet" href="css/main.scss">
+<link rel="stylesheet" href="3C.index.es.html">
 
 
 
@@ -41,19 +42,19 @@
     <div class="">
       <div id="portada"class="menu">
         <ul>
-          <img src="img/logo.png" class="logo" alt=""/>
-          <p class="catalan">
+          <img src="3C.img/logo.png" class="logo" alt=""/>
+          <a href="#"><p class="catalan">
             Catalá
-          </p>
-          <p class="castellano">
+          </p></a>
+          <a href="3C.index.es.html"><p class="castellano">
             Español
-          </p>
-            <img class="home"src="img/home.png" alt=""/>
-          <li><a href="#contact">3D</a></li>
+          </p></a>
+            <img class="home"src="3C.img/home.png" alt=""/>
+          <li><a href="../3D/3D.index.ca.html">3D</a></li>
             <li><a href="#home">3C</a></li>
-          <li><a href="#about">3B</a></li>
-        <li><a href="#news">3A</a></li>
-        <li><a href="#news">Inici</a></li>
+          <li><a href="../3B/3B.index.ca.html">3B</a></li>
+        <li><a href="../3A/3A.index.ca.html">3A</a></li>
+        <li><a href="../index.html">Inici</a></li>
         </ul>
       </div>
 
@@ -64,11 +65,11 @@
          <p>3ºEso C</p>
 
        </div>
-       <a href="#bajar"><img class="flechabajo"src="img/abajo.png" alt=""/></a>
+       <a href="#bajar"><img class="flechabajo"src="3C.img/abajo.png" alt=""/></a>
 
 
        </div>
-       <img class="portada"src="img/3c.jpg" alt=""/>
+       <img class="portada"src="3C.img/3c.jpg" alt=""/>
      </div>
 
 
@@ -115,7 +116,7 @@
                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
      <div class="flipper">
        <div class="front">
-       <img  class="didac" src="img/didac.jpg" alt="" />
+       <img  class="didac" src="3C.img/didac.jpg" alt="" />
        </div>
        <div class="back">
          <h2 class="nombredidac">Didac</h2>
@@ -129,7 +130,7 @@
      <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
      <div class="flipper apartado">
      <div class="front apartado">
-     <img  class="neda" src="img/neda.jpg" alt="" />
+     <img  class="neda" src="3C.img/neda.jpg" alt="" />
      </div>
      <div class="back">
      <h2 class="nombrenada">Nada</h2>
@@ -143,7 +144,7 @@
      <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
      <div class="flipper apartado">
      <div class="front apartado">
-     <img  class="raquel" src="img/raquel.jpg" alt="" />
+     <img  class="raquel" src="3C.img/raquel.jpg" alt="" />
      </div>
      <div class="back">
      <h2 class="nombreraquel">Raquel</h2>
@@ -165,7 +166,7 @@
                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
      <div class="flipper">
        <div class="front">
-       <img  class="didac" src="img/Adriana.jpg" alt="" />
+       <img  class="didac" src="3C.img/Adriana.jpg" alt="" />
        </div>
        <div class="back">
          <h2 class="nombredidac">Adriana Ramos</h2>
@@ -179,7 +180,7 @@
      <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
      <div class="flipper apartado">
      <div class="front apartado">
-     <img  class="neda" src="img/Carla.jpg" alt="" />
+     <img  class="neda" src="3C.img/Carla.jpg" alt="" />
      </div>
      <div class="back">
      <h2 class="carla">Carla Fernández</h2>
@@ -193,7 +194,7 @@
      <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
      <div class="flipper apartado">
      <div class="front apartado">
-     <img  class="raquel" src="img/Nabiha.jpg" alt="" />
+     <img  class="raquel" src="3C.img/Nabiha.jpg" alt="" />
      </div>
      <div class="back">
      <h2 class="nabiha">Nabiha Qaisar</h2>
@@ -209,7 +210,7 @@
                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
      <div class="flipper">
        <div class="front">
-       <img  class="didac" src="img/natii.jpg" alt="" />
+       <img  class="didac" src="3C.img/natii.jpg" alt="" />
        </div>
        <div class="back">
          <h2 class="nati">Nati Castaño</h2>
@@ -223,7 +224,7 @@
      <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
      <div class="flipper apartado">
      <div class="front apartado">
-     <img  class="neda" src="img/hana.jpg" alt="" />
+     <img  class="neda" src="3C.img/hana.jpg" alt="" />
      </div>
      <div class="back">
      <h2 class="hana">Hana Benmehdia</h2>
@@ -236,7 +237,7 @@
      <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
      <div class="flipper apartado">
      <div class="front apartado">
-     <img  class="raquel" src="img/omar.jpg" alt="" />
+     <img  class="raquel" src="3C.img/omar.jpg" alt="" />
      </div>
      <div class="back">
      <h2 class="omar">Omar Benfatina</h2>
@@ -257,7 +258,7 @@
                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                    <div class="flipper">
                    <div class="front">
-                   <img  class="didac" src="img/isa.jpg" alt="" />
+                   <img  class="didac" src="3C.img/isa.jpg" alt="" />
                    </div>
                    <div class="back">
                    <h2 class="nombredidac">Isabel Maria</h2>
@@ -271,7 +272,7 @@
                    <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
                    <div class="flipper apartado">
                    <div class="front apartado">
-                   <img  class="neda" src="img/patri.jpg" alt="" />
+                   <img  class="neda" src="3C.img/patri.jpg" alt="" />
                    </div>
                    <div class="back">
                    <h2 class="carla">Patricia Buido</h2>
@@ -285,7 +286,7 @@
                    <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
                    <div class="flipper apartado">
                    <div class="front apartado">
-                   <img  class="raquel" src="img/dani.jpg" alt="" />
+                   <img  class="raquel" src="3C.img/dani.jpg" alt="" />
                    </div>
                    <div class="back">
                    <h2 class="nabiha"> Daniel Montesinos</h2>
@@ -299,7 +300,7 @@
                      <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                   <div class="flipper">
                   <div class="front">
-                  <img  class="didac" src="img/sergio.jpg" alt="" />
+                  <img  class="didac" src="3C.img/sergio.jpg" alt="" />
                   </div>
                   <div class="back">
                   <h2 class="nombredidac">Sergio Zamarro Cobos</h2>
@@ -312,7 +313,7 @@
                   <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
                   <div class="flipper apartado">
                   <div class="front apartado">
-                  <img  class="neda" src="img/juanmi.jpg" alt="" />
+                  <img  class="neda" src="3C.img/juanmi.jpg" alt="" />
                   </div>
                   <div class="back">
                   <h2 class="carla">Juanmi</h2>
@@ -325,7 +326,7 @@
                   <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
                   <div class="flipper apartado">
                   <div class="front apartado">
-                  <img  class="raquel" src="img/antony.jpg" alt="" />
+                  <img  class="raquel" src="3C.img/antony.jpg" alt="" />
                   </div>
                   <div class="back">
                   <h2 class="nabiha"> Antony</h2>
@@ -339,7 +340,7 @@
                      <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
          <div class="flipper">
          <div class="front">
-         <img  class="didac" src="img/osama.jpg" alt="" />
+         <img  class="didac" src="3C.img/osama.jpg" alt="" />
          </div>
          <div class="back">
          <h2 class="nati">Osama</h2>
@@ -352,7 +353,7 @@
          <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
          <div class="flipper apartado">
          <div class="front apartado">
-         <img  class="neda" src="img/muhamad.jpg" alt="" />
+         <img  class="neda" src="3C.img/muhamad.jpg" alt="" />
          </div>
          <div class="back">
          <h2 class="hana">Muhammad</h2>
@@ -364,7 +365,7 @@
          <div class="flip-container apartado" ontouchstart="this.classList.toggle('hover');">
          <div class="flipper apartado">
          <div class="front apartado">
-         <img  class="raquel" src="img/tamor.jpg" alt="" />
+         <img  class="raquel" src="3C.img/tamor.jpg" alt="" />
          </div>
          <div class="back">
          <h2 class="omar">Tamoor</h2>
@@ -389,20 +390,20 @@
     <div  id="volver"class="fotoentrevistados">
 <div class="parafomarta">
   <div class="hovergallery">
-<a href="#marta"><img src="img/marta.jpg" title="Marta"/></a>
+<a href="#marta"><img src="3C.img/marta.jpg" title="Marta"/></a>
 
 </div>
 </div>
 <div class="parafojuniad">
   <div class="hovergallery1">
-  <a href="#juniad"><img src="img/juniad.jpg" title="Junaid"/></a>
+  <a href="#juniad"><img src="3C.img/juniad.jpg" title="Junaid"/></a>
 
   </div>
 </div>
 
 <div class="parafoalejandro">
   <div class="hovergallery">
-  <a href="#alejandro"><img src="img/alejandro.png" title="Alejandro"/></a>
+  <a href="#alejandro"><img src="3C.img/alejandro.png" title="Alejandro"/></a>
 
   </div>
 </div>
@@ -411,21 +412,21 @@
 <div class="fotoentrevistados2">
   <div class="parafojuan">
     <div class="hovergallery">
-    <a href="#juan"><img src="img/juan.png" title="Juan"/></a>
+    <a href="#juan"><img src="3C.img/juan.png" title="Juan"/></a>
 
     </div>
   </div>
 
   <div class="parafosergio">
     <div class="hovergallery">
-    <a href="#sergio"><img src="img/sergio.png" title="Sergio"/></a>
+    <a href="#sergio"><img src="3C.img/sergio.png" title="Sergio"/></a>
 
     </div>
   </div>
 
   <div class="parafomamadou">
     <div class="hovergallery">
-    <a href="#mamadou"><img src="img/mamadou.jpg" title="Mamadou"/></a>
+    <a href="#mamadou"><img src="3C.img/mamadou.jpg" title="Mamadou"/></a>
 
     </div>
   </div>
@@ -439,10 +440,10 @@
 
 
     <div class="entremarta">
-      <a href="#volver"><img class="volver"src="img/arriba.png" alt="" /></a>
+      <a href="#volver"><img class="volver"src="3C.img/arriba.png" alt="" /></a>
 <iframe class="videomarta" src="https://www.youtube.com/embed/txYyHLiU6JA" frameborder="0" allowfullscreen></iframe>
         <h2 id="marta"class="nombremarta">Marta Sypianska (Grup 1)</h2>
-      <img class="marta"src="img/marta.jpg" alt="" />
+      <img class="marta"src="3C.img/marta.jpg" alt="" />
 
       <p class="textomarta"> ­Marta Sypianska, 37 anys, va néixer en Polònia en un poble petit. Ha estat allà fins als 21 anys, iva decidir venir aquí a Espanya per estudiar en la universitat sobre la filologia anglesa. I ara es una professora d’anglès.
         Al principi no entenia res de català ni de castellà només sabia parlar anglès. I ha vingut per seguir estudiant millor en la universitat. La frase que va dir i per a nosaltres és commocionant és "el pla que tenia és venir aquí a estudiar la universitat de filologia anglesa, aprendre castellà i tornar a Polònia.
@@ -451,10 +452,10 @@
     </div>
 
 <div id="juniad"class="entrejunaid">
-<a href="#volver"><img class="volver"src="img/arriba.png" alt="" /></a>
+<a href="#volver"><img class="volver"src="3C.img/arriba.png" alt="" /></a>
   <iframe  class="videojuniad"width="420" height="315" src="https://www.youtube.com/embed/A1vos0MC8Z8" frameborder="0" allowfullscreen></iframe>
   <h2 class="nombrejuniad">Muhammad Junaid Qaisar (Grup 2)</h2>
-  <img class="juniad"src="img/juniad.jpg" alt="" />
+  <img class="juniad"src="3C.img/juniad.jpg" alt="" />
   <p class="textojuniad">  El seu nom es Muhammad Junaid Qaisar. Té 21 anys. Va estudiar a Barres i Ones. Va fer Quart de l'ESO. Va venir a viure a Badalona fa 5 anys i actualment té una botiga. Té un cotxe BMW i viu aquí amb tota la seva família, i no té cap problema.
 
   </p>
@@ -462,10 +463,10 @@
 </div>
 
 <div id="alejandro"class="entrealejandro">
-<a href="#volver"><img class="volver"src="img/arriba.png" alt="" /></a>
+<a href="#volver"><img class="volver"src="3C.img/arriba.png" alt="" /></a>
 <iframe class="videoomar"width="420" height="315" src="https://www.youtube.com/embed/Rz8Fx6lUgCw" frameborder="0" allowfullscreen></iframe>
   <h2 class="nombrealejandro">Alejandro Olivarez (Grup 3)</h2>
-  <img class="alejandro"src="img/alejandro.png" alt="" />
+  <img class="alejandro"src="3C.img/alejandro.png" alt="" />
   <p class="textoalejandro">  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</b>
 
 
@@ -476,10 +477,10 @@
 
 <div id="juan"class="entrejuan">
 
-  <a href="#volver"><img class="volver"src="img/arriba.png" alt="" /></a>
+  <a href="#volver"><img class="volver"src="3C.img/arriba.png" alt="" /></a>
 
   <h2 class="nombrejuan">Juan Antonio Cortejosa Barrios (Grup 4)</h2>
-  <img class="juan"src="img/juan.png" alt="" />
+  <img class="juan"src="3C.img/juan.png" alt="" />
   <p class="textojuan">
     La persona entrevistada es Juan Antonio Cortejosa. Procedeix del poble de Barbate, que està a la província de Cadis. Ara té 46 anys. Barbate és un poble bastant petit de Cadis. La majoria de cases són rústiques. Ara hi ha molts llocs per a passar l'estona: la biblioteca, la platja, el parcs, el poliesportiu... El testimoni de Juan Antonio és interessant perquè en aquella època era molt difícil emigrar perquè no era normal. Va venir a aquí a guanyar-se millor la vida per la seva família. la frase que volem destacar: "Abans es podia anar al carrer sense perill y ara amb aquesta societat no es pot.
 
@@ -489,10 +490,10 @@
 </div>
 
 <div id="sergio"class="entresergio">
-  <a href="#volver"><img class="volver"src="img/arriba.png" alt="" /></a>
+  <a href="#volver"><img class="volver"src="3C.img/arriba.png" alt="" /></a>
     <iframe class="videosergio"width="500" height="315" src="https://www.youtube.com/embed/s_S0bZ0ErJM" frameborder="0" allowfullscreen></iframe>
   <h2 class="nombresergio">Sergio Zamarro Alonso (Grup 5)</h2>
-  <img class="sergio"src="img/sergio.png" alt="" />
+  <img class="sergio"src="3C.img/sergio.png" alt="" />
   <p class="textosergio">
     L' entrevistat es diu Sergio Zamarro Alonso, te 50 anys i viu a Badalona. Va nèixer a Orense (Galícia) i va viure allà fins als 20 anys. Va fer el servei militar un any.
 
@@ -503,10 +504,10 @@
 
 
 <div id="mamadou"class="entremamadou">
-  <a href="#volver"><img class="volver"src="img/arriba.png" alt="" /></a>
+  <a href="#volver"><img class="volver"src="3C.img/arriba.png" alt="" /></a>
 <iframe class="videomamadou"width="420" height="315" src="https://www.youtube.com/embed/Z6xZ-ZPKEFg" frameborder="0" allowfullscreen></iframe>
   <h2 class="nombremamadou">Mamadou (Grup 6)</h2>
-  <img class="sergio"src="img/mamadou.jpg" alt="" />
+  <img class="sergio"src="3C.img/mamadou.jpg" alt="" />
   <p class="textomamadou">
     Mamadou és de Guinea Bissau, té 35 anys, esta casat amb una dona catalana de 30 anys i l’estima molt. No tenen fills, quan Mamadou va decidir arribar a Espanya, va passar moltes dificultats a arribar perquè va venir en pàtera, un dia estava a punt de morir perquè va veure aigua del mar. Va venir amb molta gent i la majoria van morir. Quan ja havia arribat a Espanya li va dificultar a viure a una manera diferent del que vivia abans, però es va adaptar molt ràpid i ara es molt feliç amb la seva parella.
 
@@ -521,13 +522,13 @@
 
 
 <footer class="foter">
-  <p class="textofoter"> 3ºEso C</p> <img class="imgpositivo"src="img/positivo.png" alt="" />
+  <p class="textofoter"> 3ºEso C</p> <img class="imgpositivo"src="3C.img/positivo.png" alt="" />
 
-<a href="#portada"><img class="flecha"src="img/arriba.png" alt="" /></a>
-<img class="linya"src="img/liña.png" alt="" />
+<a href="#portada"><img class="flecha"src="3C.img/arriba.png" alt="" /></a>
+<img class="linya"src="3C.img/liña.png" alt="" />
 <div class="foter1">
-  <a href="http://www.facebook.com" target="_blank"><img class="fs"src="img/fs.png" alt="" /></a><a href="https://twitter.com/" target="_blank"><img class="twit"src="img/twit.png" alt="" /></a> <a href="https://plus.google.com/collections/featured" target="_blank"><img  class="google"src="img/google.png" alt="" /></a>
-  <a href="http://barresiones.com/web/" target="_blank"><img class="barres"src="img/barres.jpg" alt="" /></a>
+  <a href="http://www.facebook.com" target="_blank"><img class="fs"src="3C.img/fs.png" alt="" /></a><a href="https://twitter.com/" target="_blank"><img class="twit"src="3C.img/twit.png" alt="" /></a> <a href="https://plus.google.com/collections/featured" target="_blank"><img  class="google"src="3C.img/google.png" alt="" /></a>
+  <a href="http://barresiones.com/web/" target="_blank"><img class="barres"src="3C.img/barres.jpg" alt="" /></a>
 </div>
 
 </footer>
