--- a/3D/3D.index.es.html
+++ b/3D/3D.index.es.html
@@ -22,7 +22,7 @@
 	<nav class="navegadorder">
 	<a href="../3A/3A.index.es.html">3 A</a>
 	<a href="../3B/3B.index.es.html">3 B</a>
-	<a href="../3D/3D.index.es.html">3 C</a>
+	<a href="../3C/3C.index.es.html">3 C</a>
 	<a class="activao" href="#">3 D</a>
 	<a class="es activao" href="#">ES</a><span>|</span><a class="cat"  href="3D.index.ca.html">CAT</a>
 
