--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<a href="3B/3B.index.ca.html">3 B</a>
 	<a href="3C/3C.index.ca.html">3 C</a>
 	<a  href="3D/3D.index.ca.html">3 D</a>
-	<a class="es activao" href="#">ES</a><span>|</pan><a class="cat"  href="idiomas/cat/index.html">CAT</a>
+	<a class="es" href="index.es.html">ES</a><span>|</pan><a class="cat  activao"  href="index.html">CAT</a>
 
 	</nav>
 
@@ -40,7 +40,7 @@
 	<a id="3b" href="3B/3B.index.ca.html">3 B</a><br><hr id="hover3" width="170px">
 	<a id="3c" href="3C/3C.index.ca.html">3 C</a><br><hr id="hover4" width="180px">
 	<a id="3d" href="3D/3D.index.ca.html">3 D</a><br><hr id="hover5" width="200px">
-	<a class="es activao"  class="activao" href="#">ES</a><span>|</pan><a class="cat"  href="idiomas/cat/index.html">CAT</a>
+	<a class="es " href="index.es.html">ES</a><span>|</pan><a class="cat activao"  href="index.html">CAT</a>
 
 
 	</div>
