--- a/3D/3D.index.es.html
+++ b/3D/3D.index.es.html
@@ -36,10 +36,10 @@
 <img id="menudesplegable" width="40px" class="iconmenu" src="img/menu.svg">
 	</div>
 	<div id="desplegable" class="desplegable">
-	<a id="inicio" href="#">Inicio</a><br><hr id="hover1" width="150px">
-	<a id="3a" href="#">3 A</a><br><hr id="hover2" width="160px">
-	<a id="3b" href="#">3 B</a><br><hr id="hover3" width="170px">
-	<a id="3c" href="#">3 C</a><br><hr id="hover4" width="180px">
+	<a id="inicio" href="../index.es.html">Inicio</a><br><hr id="hover1" width="150px">
+	<a id="3a" href="../3A/3A.index.es.html">3 A</a><br><hr id="hover2" width="160px">
+	<a id="3b" href="../3B/3B.index.es.html">3 B</a><br><hr id="hover3" width="170px">
+	<a id="3c" href="../3C/3C.index.es.html">3 C</a><br><hr id="hover4" width="180px">
 	<a id="3d" class="activao" href="#">3 D</a><br><hr id="hover5" width="200px">
 	<a class="es activao"  class="activao" href="#">ES</a><span>|</span><a class="cat"  href="3D.index.ca.html">CAT</a>
 
