--- a/3C/3C.index.es.html
+++ b/3C/3C.index.es.html
@@ -433,7 +433,9 @@
           <a href="http://www.facebook.com" target="_blank"><img class="fs"src="3C.img/fs.png" alt="" /></a><a href="https://twitter.com/" target="_blank"><img class="twit"src="3C.img/twit.png" alt="" /></a> <a href="https://plus.google.com/collections/featured" target="_blank"><img  class="google"src="3C.img/google.png" alt="" /></a>
           <a href="http://barresiones.com/web/" target="_blank"><img class="barres"src="3C.img/barres.jpg" alt="" /></a>
         </div>
-
+        <p class="creado">
+          Creado por Mohamed Attabi & Dani Arias
+        </p>
         </footer>
 
 
